# tte

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: warnings.cmake
modules/app/: CMakeLists.txt
modules/app/include/app/: app.hpp
modules/app/include/tte/app/: app.hpp
modules/app/src/: app.cpp  main.cpp
modules/common/: CMakeLists.txt
modules/common/include/tte/common/: assert.hpp  event.hpp  number_types.hpp
modules/engine/: CMakeLists.txt
modules/engine/include/tte/engine/: engine.hpp
modules/engine/src/: naive_engine.cpp
modules/engine/test/: CMakeLists.txt  engine_tests.cpp
modules/platform_layer/: CMakeLists.txt
modules/platform_layer/include/tte/platform_layer/: platform_layer.hpp  ttf.hpp
modules/platform_layer/src/: common.cpp  platform_layer.cpp  platform_layer_common.cpp  sdl_platform_layer.cpp  ttf_common.cpp
modules/platform_layer/src/macos/: platform_layer.mm
modules/platform_layer/src/sdl/: platform_layer.cpp
modules/ui/: CMakeLists.txt
modules/ui/src/: main.cpp
scripts/: build.sh  build_and_run.sh  build_and_test.sh  build_and_test_and_run.sh  build_app_lib.sh  build_sdl2.sh  hot_reload.sh  run_clang_format.sh
